--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -566,7 +566,8 @@
             <div class="about_me">
                 <div class="wx">
                     <a href="javascript:" class="footer_wx_icon">
-                        <img src="/static/index/images/ABT.png" style="width: 57%"/>
+                        <div><b style="font-size: 1.5rem;">&nbsp&nbsp&nbsp&nbsp&nbsp艾比特数字资产价值兑换交易平台</b></div>
+                        <!--<img src="/static/index/images/ABT.png" style="width: 57%"/>-->
                     </a>
                 </div>
             </div>
