--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -60,7 +60,7 @@
         </li>
       </ul>
   </div>
-    <div class="weui-panel_access">
+    <div class="weui-panel_access" style="background-color: #121524">
         <div class="weui-panel__hd" style="color: white">新闻资讯</div>
         <div class="weui-panel__bd">
             {volist name="news_list" id="val"}
