--- a/application/admin/view/admin/news_add.html
+++ b/application/admin/view/admin/news_add.html
@@ -47,7 +47,7 @@
             <label for="title" class="layui-form-label">
                         简略描述     </label>
             <div class="layui-input-inline"  style="width: 70%">
-                <input type="text" id="des" name="des" required="" lay-verify="des"
+                <input type="text" id="des" name="des"
                        autocomplete="off" class="layui-input" >
             </div>
             <div class="layui-form-mid layui-word-aux">
