--- a/application/mobile/view/login/login.html
+++ b/application/mobile/view/login/login.html
@@ -29,6 +29,19 @@
                 </span>
                 <input type="password" name="password" value="" placeholder="请输入您的密码" lay-verify="password"/>
             </div>
+            <div class="weui-flex" style="margin-bottom: 0.5rem;">
+                <div class="weui-flex__item">
+                    <div class="placeholder" style="color: white">
+                        <input type="checkbox" name="remember" checked="" value="1" style="color: white">
+                    </div>
+                </div>
+                <div class="weui-flex__item">
+                    <div class="placeholder" style="color: #808080;text-indent: -7.1rem;font-size: 0.5rem;line-height: 0.6rem;">
+                            记住密码
+                    </div>
+                </div>
+            </div>
+
             <button type="submit" class="login-btn common-div" lay-submit lay-filter="login">登陆</button>
             <!--<a href="javascript:;" class="login-btn common-div" >登陆</a>-->
             <!--<a href="javascript:;" class="login-oth-btn common-div">微信登陆</a>-->
