--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -208,7 +208,7 @@
             <dd style="text-indent: 1.6rem;" id="up_down_per_{$val.abbreviation}">0</dd>
             <dd class="w142" style="    text-indent: 1.6rem;">0</dd>
             <dd class="w142" style="    text-indent: 2.5rem;">0</dd>
-            <dd class="w102" style="width:150px;text-align: center;text-indent: 0.5em;"><input type="button" value="去交易" class="btns2" onclick="top.location='/index/Trade/index'"></dd>
+            <dd class="w102" style="width:150px;text-align: center;text-indent: 0.5em;"><input type="button" value="去交易" class="btns2" onclick="top.location='/index/Trade/index?id={$val.id}'"></dd>
         </dl>
     </li>
     {/volist}
