--- a/application/mobile/view/trade/index.html
+++ b/application/mobile/view/trade/index.html
@@ -742,7 +742,7 @@ function count_profit(){
             }
             amount=-amount;
         }
-        console.log(amount);
+//        console.log(amount);
         $(this).children('.profit').text(math_floor(amount)).attr("style","color:"+color+";");
         $(this).children('.list_now_price').attr("style","color:"+color+";");
     });
@@ -1099,7 +1099,7 @@ myChart.setOption(option);
 }
 
 	var url = baseUrl + "/candlestick?coinType="+coinType +"&gap=" + gap + "&count=" + count;
-    var url = 'https://aioq.cn/golang' + "/candlestick?coinType="+coinType +"&gap=" + gap + "&count=" + count;
+//    var url = 'https://aioq.cn/golang' + "/candlestick?coinType="+coinType +"&gap=" + gap + "&count=" + count;
 	$.ajax({    
 		type: 'get',
 		url: url,
@@ -1120,7 +1120,7 @@ $(function  () {
     var loadingSecond;
     function prepareWs(){
         var url = baseUrl + "/openPrice";
-        url = 'https://aioq.cn/golang/openPrice';
+//        url = 'https://aioq.cn/golang/openPrice';
         //获取产品开盘价
         $.ajax({
             type: 'get',
@@ -1144,7 +1144,7 @@ $(function  () {
         if(loc.protocol == 'https:')
             wsUrl = 'wss:'
         wsUrl += '//' + loc.host + '/golang/ws?uid=' + uid;
-        wsUrl= 'wss://aioq.cn/golang/ws?uid=4';
+//        wsUrl= 'wss://aioq.cn/golang/ws?uid=4';
 
         var ws = new WebSocket(wsUrl)
 //        console.log(wsUrl);
