--- a/application/index/view/trade/index1.html
+++ b/application/index/view/trade/index1.html
@@ -20,7 +20,7 @@
 <title>aioq.cn艾比特数字资产价值兑换交易平台_区块链服务平台【艾比特】</title>
     <style type="text/css">
     .models {
-        display: none;
+        /*display: none;*/
         position: fixed;
         left: 0;
         top: 0;
@@ -34,7 +34,7 @@
         position: fixed;
         width: 400px;
         height: 35rem;
-        background: #FFFFFF;
+        background: #141c26;
         left: 50%;
         top: 50%;
         margin-left: -200px;
@@ -42,12 +42,12 @@
         padding: 15px 20px;
         text-align: center;
         border-radius: 8px;
-
+        color: orange;
     }
 
     .models-content p {
         font-size: 16px;
-        color: black;
+        color: orange;
         text-align: left;
         margin-bottom: 20px;
     }
@@ -55,7 +55,7 @@
     .models-content button {
         outline: none;
         border: none;
-        background: #4f94e7;
+        background: #808080;
         width: 80px;
         padding: 5px 0;
         border-radius: 8px;
@@ -71,23 +71,9 @@
         line-height: 30px;
         font-size: 14px;
         margin-top: 8px;
-        color: black;
+        color: orange;
     }
 
-    .models .item .chosecontype {
-        float: right;
-        margin-top: 8px;
-        width: 80%;
-        height: 30px;
-        line-height: 30px;
-        box-sizing: border-box;
-        border: 1px solid #353a59;
-        border-radius: 2px;
-        text-align: center;
-        position: relative;
-        font-size: 14px;
-        color: black;
-    }
 
     .models .chosecontype .con {
         position: absolute;
@@ -95,7 +81,7 @@
         left: 0;
         width: 100%;
         bottom: 0;
-        color: black;
+        color: orange;
     }
 
     .models .itemcon .chosecontype {
@@ -105,7 +91,7 @@
         height: 30px;
         line-height: 30px;
         box-sizing: border-box;
-        border: 1px solid #353a59;
+        border: 1px solid  orange;
         border-radius: 2px;
         text-align: center;
         position: relative;
@@ -119,41 +105,24 @@
         height: 30px;
         line-height: 30px;
         box-sizing: border-box;
-        border: 1px solid #353a59;
+        border: 1px solid orange;
         border-radius: 2px;
         text-align: center;
         position: relative;
         font-size: 14px;
     }
 
-    .models .chosecontype .btm {
-        position: absolute;
-        right: 10px;
-        color: #b5b5b5;
-        font-size: 20px;
-        z-index: 200;
-        cursor: pointer;
-        color: black;
-    }
 
     .models .more {
         width: 100%;
         box-sizing: border-box;
         padding: 15px 0;
-        color: black;
+        color: orange;
         position: inherit;
         top: 0;
-
         left: 0;
     }
 
-    .models .moretit {
-        position: relative;
-        font-size: 14px;
-        box-sizing: border-box;
-        padding-left: 10px;
-        color: black;
-    }
 
     .models .more .moretit i {
         position: absolute;
@@ -161,7 +130,6 @@
         font-size: 16px;
         color: #b5b5b5;
         cursor: pointer;
-        color: black;
     }
 
     .models .moresize {
@@ -171,15 +139,10 @@
         margin-top: 15px;
         line-height: 20px;
         /*color: #999;*/
-        color: black;
+        color: orange;
     }
 
-    .models .more .moreitemcon {
-        width: 100%;
-        box-sizing: border-box;
-        padding: 0 10px;
-        color: black;
-    }
+
 
     .models .moreitemcon span {
         float: left;
@@ -193,36 +156,6 @@
         color: black;
     }
 
-    .models .moreitemcon .one[data-v-c4371006] {
-        float: right;
-        width: 80%;
-        margin: 0 auto;
-        color: black;
-    }
-
-    .models .more .moreitemcon .morechosecon[data-v-c4371006] {
-        float: left;
-        margin-right: 20px;
-        margin-top: 15px;
-        width: 170px;
-        height: 30px;
-        line-height: 30px;
-        box-sizing: border-box;
-        border: 1px solid #353a59;
-        border-radius: 2px;
-        text-align: center;
-        position: relative;
-        color: black;
-    }
-
-    .models .morechosecon .jian[data-v-c4371006] {
-        position: absolute;
-        left: 5px;
-        color: #b5b5b5;
-        font-size: 20px;
-        color: black;
-        cursor: pointer;
-    }
 
     .models .more .moreitemcon .morechosecon input[data-v-c4371006] {
         background: transparent;
@@ -231,33 +164,6 @@
         text-align: center;
         font-size: 14px;
         width: 130px;
-        color: black;
-    }
-
-    .models .morechosecon .jia[data-v-c4371006] {
-        position: absolute;
-        right: 5px;
-        color: #b5b5b5;
-        font-size: 20px;
-        cursor: pointer;
-        color: black;
-    }
-
-    .models .more .moreitemcon .a[data-v-c4371006] {
-        width: 60px;
-        float: left;
-        margin-top: 15px;
-        height: 30px;
-        line-height: 26px;
-        font-size: 14px;
-        box-sizing: border-box;
-        border: 1px solid #353a59;
-        border-radius: 4px;
-        background: #bd0000;
-        text-align: center;
-        margin-right: 5px;
-        cursor: pointer;
-        color: black;
     }
     .models .chosecontype .eaffer {
         position: relative;
@@ -290,6 +196,18 @@
     .models input{
         border: none;
         width: 100%;
+        background: #141c26;
+        color: orange;
+    }
+    .layui-form-switch em{
+        color: orange !important;
+    }
+    .layui-form-switch i{
+        background-color: orange !important;
+    }
+    .layui-form-onswitch{
+         border-color: white;
+        background-color: white;
     }
     </style>
 </head>
@@ -546,8 +464,8 @@
 <div class="models">
     <form class="layui-form" action="">
         <div class="models-content">
-            <div data-v-c4371006="" class="leftbtm" style="width: 100%;box-sizing: border-box;padding-bottom: 20px;border: 1px solid #353a59;margin-top: 10px;color: black;">
-                <div data-v-c4371006="" class="tit" style="width: 100%;height: 42px;line-height: 42px;box-sizing: border-box;padding-left: 20px;font-size: 14px;color: black;">新建订单
+            <div data-v-c4371006="" class="leftbtm" style="width: 100%;box-sizing: border-box;padding-bottom: 20px;border: 1px solid #353a59;margin-top: 10px;color:orange">
+                <div data-v-c4371006="" class="tit" style="width: 100%;height: 42px;line-height: 42px;box-sizing: border-box;padding-left: 20px;font-size: 14px;color: orange;">新建订单
                 </div>
                 <div data-v-c4371006="" class="chose" style="width: 100%;padding: 0 20px;padding-bottom: 12px;box-sizing: border-box;border-top: 1px solid #353a59;border-bottom: 1px dashed #353a59;color: black;">
                     <div data-v-c4371006="" class="itemcon clearfix" style="    width: 100%;"><span
@@ -578,7 +496,7 @@
                         <span data-v-c4371006="">手数</span>
                         <div data-v-c4371006="" class="chosecon">
                             <i data-v-c4371006="" class="iconfont icon-jianhaob jian"></i>
-                            <input data-v-c4371006="" type="text" value=""  autocomplete="off" placeholder="0" class="shosu" name="hand" style="text-align: center"  lay-verify="number|hand">
+                            <input data-v-c4371006="" type="text" value=""  autocomplete="off"  class="shosu" name="hand" style="text-align: center"  lay-verify="number|hand">
                             <i data-v-c4371006=""  lass="iconfont icon-jiahaob jia"></i>
                         </div>
                     </div>
@@ -612,7 +530,7 @@
                         <div data-v-c4371006="" class="itemcon clearfix switchtwo" style="overflow: hidden;width: 100%;padding: 0 20px;">
                             <span data-v-c4371006="">止损</span>
                             <div class="layui-input-block">
-                                <input type="checkbox" name="stop_loss_check" value="1" lay-filter="checks-t" lay-skin="switch" lay-text="开启|不设">
+                                <input type="checkbox" name="stop_loss_check" value="1" lay-filter="checks-t" lay-skin="switch" lay-text="开启|不设" >
                             </div>
                             <div data-v-c4371006="" class="chosecon" style="width: 50%;display: none">
                                 <input data-v-c4371006="" type="number" name="stop_loss" autocomplete="off">
