--- a/application/index/view/trade/index1.html
+++ b/application/index/view/trade/index1.html
@@ -20,7 +20,7 @@
 <title>aioq.cn艾比特数字资产价值兑换交易平台_区块链服务平台【艾比特】</title>
     <style type="text/css">
     .models {
-        /*display: none;*/
+        display: none;
         position: fixed;
         left: 0;
         top: 0;
@@ -242,9 +242,9 @@
   </ul>
   <div class="tip_user">
     <div class="rel">
-      <a href="/index/User/index">
-        <img src="/static/index/images/user.png" alt="">
-      </a>
+      <!--<a href="/index/User/index">-->
+        <!--<img src="/static/index/images/user.png" alt="">-->
+      <!--</a>-->
     </div>
   </div>
 </div>
