--- a/application/index/view/trade/index1.html
+++ b/application/index/view/trade/index1.html
@@ -343,15 +343,15 @@
              <!--</select>-->
            <!--</div>-->
            <div class="ivu-form-item clear">
-             <input class="int" type="text" name="" placeholder="品种">
+             <input class="int" type="text" name="" placeholder="品种" readonly>
              <span class="r_t product_name">{$product['desc_name']}</span>
            </div>
            <div class="ivu-form-item clear">
-             <input class="int" type="text" name="" placeholder="交易单位">
+             <input class="int" type="text" name="" placeholder="交易单位" readonly>
              <span class="r_t contract">{$product['contract']|number_format=###,2,'.',''}</span>
            </div>
            <div class="ivu-form-item clear">
-             <input class="int" type="text" name="" placeholder="最小手数">
+             <input class="int" type="text" name="" placeholder="最小手数" readonly>
              <span class="r_t min_hand">{$product['min_hand']|number_format=###,2,'.',''}</span>
            </div>
 
