--- a/application/index/view/trade/index.html
+++ b/application/index/view/trade/index.html
@@ -611,14 +611,13 @@ function setCandlestick(coinType,gap,count){
             return [item.open,item.close,item.low,item.high];
         });
 			var volumes = dataFromApi.Data.map(function (item) {
-				return item.high;
+				return item.volumefrom;
 			});
 
         var valueToday = dataFromApi.Data[dataFromApi.Data.length - 1];
         $.each(valueToday,function(k,v){
             $("#price-k-" +k).text(v);
         });
-//var volumes = [86160000, -79330000, 102600000, -104890000, -85230000, -115230000, 99410000, 90120000, 79990000, 107100000, 81020000, 91710000, 84510000, 118160000, 89390000, 89820000, 100210000, 102720000, 134120000, 83770000, 92570000, 109090000, 100920000, 136670000, 80100000, 97060000, 95020000, 81530000, 80020000, 85590000, 75790000, 87390000, 88560000, 86640000, 88440000, 103260000, 79120000, 95530000, 111990000, 87790000, 86480000, 79180000, 68940000, 73190000, 147390000, 78530000, 75560000, 82270000, 71870000, 78750000, 71260000, 69690000, 90540000, 101690000, 93740000, 94130000, 91950000, 248680000, 99380000, 85130000, 89440000];
 
         var option = {
             backgroundColor: '#141c26',
@@ -829,13 +828,19 @@ function setCandlestick(coinType,gap,count){
                  }
                  },
 			{
-				name: 'Volume',
+				name: '成交量',
 				type: 'bar',
 				xAxisIndex: 1,
 				yAxisIndex: 1,
 				itemStyle: {
 					normal: {
-						color: '#7fbe9e'
+						//color: '#7fbe9e'
+							color: function(params){
+								var origin = dataFromApi.Data[params.dataIndex];
+								if(origin.open < origin.close)
+										return '#e54c4c';
+								return '#4bbb82';
+							}
 					},
 					emphasis: {
 						color: '#140'
