--- a/application/admin/view/admin/news_edit.html
+++ b/application/admin/view/admin/news_edit.html
@@ -96,7 +96,7 @@
         layedit = layui.layedit;
         layedit.set({
             uploadImage: {
-                url: '/admin/Admin/edit_upload', //接口url
+                url: '/admin/Api/edit_upload', //接口url
                 type: 'post' //默认post
             }
         });
