--- a/application/admin/view/money/user_money_list.html
+++ b/application/admin/view/money/user_money_list.html
@@ -71,12 +71,12 @@
         </form>
     </div>
     <div class="layui-row">
-        <a href="{:url('admin/Money/user_money_list',input('get.'))}&start={:quick_time_select(1)}&end={:quick_time_select(2)}" class="layui-btn layui-btn-sm layui-btn-normal">昨天</a>
-        <a href="{:url('admin/Money/user_money_list',input('get.'))}&start={:quick_time_select(2)}&end=" class="layui-btn layui-btn-sm layui-btn-normal">今天</a>
-        <a href="{:url('admin/Money/user_money_list',input('get.'))}&start={:quick_time_select(3)}&end=" class="layui-btn layui-btn-sm layui-btn-normal">本周</a>
-        <a href="{:url('admin/Money/user_money_list',input('get.'))}&start={:quick_time_select(4)}&end={:quick_time_select(5)}" class="layui-btn layui-btn-sm layui-btn-normal">上周</a>
-        <a href="{:url('admin/Money/user_money_list',input('get.'))}&start={:quick_time_select(6)}&end=" class="layui-btn layui-btn-sm layui-btn-normal">本月</a>
-        <a href="{:url('admin/Money/user_money_list',input('get.'))}&start={:quick_time_select(7)}&end={:quick_time_select(8)}" class="layui-btn layui-btn-sm layui-btn-normal">上月</a>
+        <a href="/admin/Money/user_money_list?start={:quick_time_select(1)}&end={:quick_time_select(2)}&username={:input('get.username')}&nickname={:input('get.nickname')}&type={:input('get.type')}&page_number={:input('get.page_number')}" class="layui-btn layui-btn-sm layui-btn-normal">昨天</a>
+        <a href="/admin/Money/user_money_list?start={:quick_time_select(2)}&end=&username={:input('get.username')}&nickname={:input('get.nickname')}&type={:input('get.type')}&page_number={:input('get.page_number')}" class="layui-btn layui-btn-sm layui-btn-normal">今天</a>
+        <a href="/admin/Money/user_money_list?start={:quick_time_select(3)}&end=&username={:input('get.username')}&nickname={:input('get.nickname')}&type={:input('get.type')}&page_number={:input('get.page_number')}" class="layui-btn layui-btn-sm layui-btn-normal">本周</a>
+        <a href="/admin/Money/user_money_list?start={:quick_time_select(4)}&end={:quick_time_select(5)}&username={:input('get.username')}&nickname={:input('get.nickname')}&type={:input('get.type')}&page_number={:input('get.page_number')}" class="layui-btn layui-btn-sm layui-btn-normal">上周</a>
+        <a href="/admin/Money/user_money_list?start={:quick_time_select(6)}&end=&username={:input('get.username')}&nickname={:input('get.nickname')}&type={:input('get.type')}&page_number={:input('get.page_number')}" class="layui-btn layui-btn-sm layui-btn-normal">本月</a>
+        <a href="/admin/Money/user_money_list?start={:quick_time_select(7)}&end={:quick_time_select(8)}&username={:input('get.username')}&nickname={:input('get.nickname')}&type={:input('get.type')}&page_number={:input('get.page_number')}" class="layui-btn layui-btn-sm layui-btn-normal">上月</a>
     </div>
     <xblock>
         <span class="x-right" style="line-height:40px">合计金额：{$count.sum|number_format=###,2,'.',''};数量：{$count.count} 条</span>
