--- a/application/mobile/view/trade/index.html
+++ b/application/mobile/view/trade/index.html
@@ -1339,7 +1339,7 @@ function x100(x){
 }
 function toRead(x){
     x = x + '';
-    return x.slice(0,-2) + '.'  + x.slice(-2);
+    return ( x.length <3 ? '0':x.slice(0,-2) ) + '.'  + x.slice(-2);
 }
 function isNotANumber(inputData) {
     //isNaN(inputData)不能判断空串或一个空格
