--- a/application/mobile/view/trade/index.html
+++ b/application/mobile/view/trade/index.html
@@ -493,7 +493,7 @@
                 <input type="text" readonly="readonly" value="0" class="promise_money"/>
             </div>
             <div class="m-hang">
-                <label>手续费</label>
+                <label>手续费/手</label>
                 <input type="text" readonly="readonly" class="fee" value="{$product.fee|number_format=###,2,'.',''}" />
             </div>
             <input type="hidden" id="point_wave" value="{$product['wave']}"/>
