--- a/application/mobile/view/trade/index.html
+++ b/application/mobile/view/trade/index.html
@@ -386,9 +386,9 @@
         <div class="k-xian">
             <div id="main" style="width: 100%;height:420px;"></div>
             <div class="moe">
-            	<p>账户余额： <span id="user_money">{$user.money|number_format=###,2,'.',''}</span>  </p>
+            	<p style="text-align: left">账户余额： <span id="user_money">{$user.money|number_format=###,2,'.',''}</span>  </p>
             	<p>占用保证金：<span id="user_promise_money">{$user.promise_money|number_format=###,2,'.',''}</span></p>
-            	<p>可用余额：<span id="user_real_money">{$user.real_money|number_format=###,2,'.',''}</span></p>
+            	<p style="text-align: right">可用余额：<span id="user_real_money">{$user.real_money|number_format=###,2,'.',''}</span></p>
             </div>
         </div>
         <div class="order">
